# slidesync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
slidesync/: __init__.py  _equation.py  _mermaid.py  _sync.py
tests/: test_atomic_swap.py  test_body_autofit.py  test_comment_preservation.py  test_e2e_scenarios.py  test_equation.py  test_graph_link_footer.py  test_hidden_slides.py  test_image_hash.py  test_inference.py  test_kicker_wrap.py  test_link_roundtrip.py  test_linked_image.py  test_markdown.py  test_mermaid.py  test_overlay.py  test_pull.py  test_rekey_guard.py  test_slot_validation.py  test_sync_drift.py  test_titleless_slides.py
