[project]
name = "slidesync"
version = "0.4.1"
authors = [
    { name = "Daniel Hails", email = "slidesync@hails.info" },
]
description = "Bidirectional sync between a Slidev markdown deck and Google Slides as native, editable objects"
requires-python = ">=3.10"
dynamic = ["dependencies", "readme"]
license = { text = "MIT" }
keywords = ["slidev", "google-slides", "markdown", "presentations", "slides"]

[project.scripts]
slidesync = "slidesync:main"

[project.urls]
"Homepage" = "https://github.com/DJRHails/slidesync"
"Bug Tracker" = "https://github.com/DJRHails/slidesync/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
include = ["slidesync*"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.bumpver]
current_version = "0.4.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    '^version = "{version}"',
]
"slidesync/__init__.py" = [
    '__version__ = "{version}"',
]
"README.md" = [
    "{version}",
]
